<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.source3g.hermes</groupId>
		<artifactId>hermes-parent</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>hermes-api</artifactId>
	<packaging>war</packaging>
	<name>hermes-api</name>
	<description>Hermes-api</description>


	<properties>
		<maven.tomcat.path>/hermes-api</maven.tomcat.path>
	</properties>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.tomcat.maven</groupId>
					<artifactId>tomcat7-maven-plugin</artifactId>
					<version>2.1</version>
					<configuration>
						<uriEncoding>UTF-8</uriEncoding>
						<path>/hermes-api</path>
						<port>8888</port>
					</configuration>
				</plugin>

				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.5.1</version>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.4.2</version>
					<configuration>
						<argLine>-Xmx256M -XX:MaxPermSize=128m</argLine>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.7</version>
					<configuration>
						<ajdtVersion>none</ajdtVersion>

						<!-- <wtpmanifest>true</wtpmanifest> <wtpapplicationxml>true</wtpapplicationxml> 
							<wtpversion>2.0</wtpversion> -->
						<downloadSources>true</downloadSources>
						<downloadJavadocs>true</downloadJavadocs>
					</configuration>


				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<dependency>
			<groupId>com.source3g.hermes</groupId>
			<artifactId>hermes-customer</artifactId>
			<version>${project.version}</version>
			<scope>compile</scope>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>com.source3g.hermes</groupId>
			<artifactId>hermes-merchant</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.source3g.hermes</groupId>
			<artifactId>hermes-device</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.source3g.hermes</groupId>
			<artifactId>hermes-sync</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.source3g.hermes</groupId>
			<artifactId>hermes-message</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.source3g.hermes</groupId>
			<artifactId>hermes-dictionary</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.source3g.hermes</groupId>
			<artifactId>hermes-security</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.source3g.hermes</groupId>
			<artifactId>hermes-common</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.source3g.hermes</groupId>
			<artifactId>hermes-monitor</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.source3g.hermes</groupId>
			<artifactId>hermes-api-common</artifactId>
			<version>${project.version}</version>
		</dependency>
	</dependencies>
</project>